[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/object/gate/FinalGate.gd" type="Script" id=1]
[ext_resource path="res://prefab/common/gate.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/object/gate/portal.png" type="Texture" id=3]
[ext_resource path="res://prefab/ui/interactable/interact_popup.tscn" type="PackedScene" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 6 ), SubResource( 5 ), SubResource( 4 ), SubResource( 3 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 16, 16.5 )

[node name="FinalGate" instance=ExtResource( 2 )]
script = ExtResource( 1 )

[node name="GateAnimation" parent="." index="0"]
frames = SubResource( 8 )
frame = 1
playing = true

[node name="GateCollision" parent="GateArea" index="0"]
position = Vector2( 0, 0.5 )
shape = SubResource( 9 )

[node name="InteractPopup" parent="." index="2"]
visible = false
margin_left = 8.01859
margin_top = -36.6365
margin_right = 8.01859
margin_bottom = -36.6365
title_label_text = "Proceed To Final Stage"

[node name="InteractPopupAlt" parent="." index="3" instance=ExtResource( 4 )]
visible = false
margin_left = 7.90952
margin_top = 9.07216
margin_right = 7.90952
margin_bottom = 9.07216
title_label_text = "Loop Stage"
[connection signal="body_entered" from="GateArea" to="." method="_on_GateArea_body_entered"]
[connection signal="body_exited" from="GateArea" to="." method="_on_GateArea_body_exited"]

[editable path="InteractPopupAlt"]
